#      loaded. (really useful? lets see...)
#    - bugfix: now "noSuchObject" response is handled correctly for all snmp 
#      versions. By default, v1 always returns an empty string, and v2c/v3 return 
#      "noSuchObject". Now all the modes translate noSuchObject to an empty string,
#      and some extra debug info in case of v2c/v3
#
#   ----------------------------------------------------------------------
# * 0.03b1
#   ----------------------------------------------------------------------
#    - feature: all styles are now handled in an external css stylesheet. 
#      3 stylesheets currently available: 
#       * classic.css: follow the style of previous versions of the plugin
#       * icinga.css: follow the style of the icinga classic ui
#       * nagiosxi.css: follow the style of the nagiosxi ui
#    - change: moved javascript to external file & reviewed to not generate conflicts 
#      with styles defined in css stylesheets
#    - feature: new interface inclusion/exclusion system distinguing properties and 
#      traffic load:
#       * include/exclude interface from load tracking. Load tracking consists 
#         in a check of the bandwidth usage of the interface. By default, all 
#         the interfaces are included in this tracking. Excluding an interface 
#         from that tracking is usually done for interfaces that we don't want 
#         any tracking (e.g. loopback interfaces)
#       * include/exclude interface from property tracking. Property tracking 
#         consists in the check of any changes in the properties of an interface, 
#         properties listed via the --track option. By default, only the 
#         "operstatus" property is tracked. You have the ability to exclude/include 
#         some interfaces from that check. This would be done for exemple for 
#         ports on which printers are connected (indeed, some printers going in 
#         standby mode has also their network interface going done, generating 